# MachineVision

./: CMakeLists.txt  depend-OpenCv-config.cmake
libs/opencv/: CMakeLists.txt  opencv_first.h
libs/opencv/src/: opencv_first.cpp
src/: library.cpp  library.h
test/: test.cpp
test-ffmpeg/: CMakeLists.txt  LogTest.c  convert_video.c  convert_video.h  extra_audio.c  extra_audio.h  main.c  wings.h
test-ffmpeg/src/: convert_video.c  extra_audio.c  extra_audio.h  extra_video.c  extra_video.h  main.c  wings.h
test-opencv/: CMakeLists.txt  test.cpp
test-opencv/libs/opencv/: CMakeLists.txt  opencv_first.h
test-opencv/libs/opencv/src/: opencv_first.cpp
